fix overflow x

--- a/src/shared/components/CinemaPagination/cinemaPagination.scss
+++ b/src/shared/components/CinemaPagination/cinemaPagination.scss
@@ -28,7 +28,7 @@
   position: relative;
   display: flex;
   justify-content: center;
-  min-width: 50px;
+  min-width: 30px;
   height: 50px;
 }
 
